--- a/build.gradle
+++ b/build.gradle
@@ -1,52 +1,87 @@
-
-
-buildscript {
-    repositories {
-        mavenLocal()
-    	mavenCentral()
-    }
-	    dependencies {
-		classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
-       }
+plugins {
+  id 'application'
+  id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
-apply plugin: 'java'
-apply plugin: 'javafx-gradle-plugin'
-apply plugin: 'idea'
-apply plugin: 'application'
-apply plugin: 'eclipse'
-
-
-
-
-jfx {
-    // minimal requirement for jfxJar-task
-    mainClass = 'org.test.demogui.TrideumDemoGUI'
-    
-    // minimal requirement for jfxNative-task
-    vendor = 'test'
-} 
-
-
-
-
-mainClassName = 'org.test.demogui.TrideumDemoGUI'
-
+repositories {
+    jcenter()
+    mavenCentral()
+}
 
 dependencies {
+    compile 'eu.hansolo:colors:+'
+    compile 'eu.hansolo:Medusa:+'
    // compile group: 'org.apache.poi', name: 'poi', version: '4.0.0'
 }
 
 
+javafx {
+    version = "13"
+    modules = [ 'javafx.controls' ]
+}
 
-/*jar {
-    doFirst {
-        manifest {
-            if (!configurations.compile.isEmpty()) {
-                attributes(
-                        'Class-Path': configurations.compile.collect{it.toURI().toString()}.join(' '),
-                        'Main-Class': 'org.test.demogui.TriduemDemoGUII')
-            }
-        }
-    }
-}*/
+//mainClassName = 'HelloFX'
+mainClassName = 'eu.hansolo.CustomGaugeSkin'
+
+// Tasks to start the demos from gradle (e.g. gradle ActivityDashboard)
+task ActivityDashboard(type: JavaExec) {
+    main = "eu.hansolo.ActivityDashboard"
+    classpath = sourceSets.main.runtimeClasspath
+}
+task ClockControl(type: JavaExec) {
+    main = "eu.hansolo.ClockControl"
+    classpath = sourceSets.main.runtimeClasspath
+}
+task ClockOfClocks(type: JavaExec) {
+    main = "eu.hansolo.ClockOfClocks"
+    classpath = sourceSets.main.runtimeClasspath
+}
+task ColoredCloc(type: JavaExec) {
+    main = "eu.hansolo.ColoredClock"
+    classpath = sourceSets.main.runtimeClasspath
+}
+task CombinedGauges(type: JavaExec) {
+    main = "eu.hansolo.CombinedGauges"
+    classpath = sourceSets.main.runtimeClasspath
+}
+task CompassGauge(type: JavaExec) {
+    main = "eu.hansolo.CompassGauge"
+    classpath = sourceSets.main.runtimeClasspath
+}
+task CustomGaugeSkinDemo(type: JavaExec) {
+    main = "eu.hansolo.CustomGaugeSkinDemo"
+    classpath = sourceSets.main.runtimeClasspath
+}
+task FGaugeDemo(type: JavaExec) {
+    main = "eu.hansolo.FGaugeDemo"
+    classpath = sourceSets.main.runtimeClasspath
+}
+task FuelGaugeDemo(type: JavaExec) {
+    main = "eu.hansolo.FuelGaugeDemo"
+    classpath = sourceSets.main.runtimeClasspath
+}
+task FunLevelGaugeDemo(type: JavaExec) {
+    main = "eu.hansolo.FunLevelGaugeDemo"
+    classpath = sourceSets.main.runtimeClasspath
+}
+task GaugeDemo(type: JavaExec) {
+    main = "eu.hansolo.GaugeDemo"
+    classpath = sourceSets.main.runtimeClasspath
+}
+task InteractiveDemo(type: JavaExec) {
+    main = "eu.hansolo.InteractiveDemo"
+    classpath = sourceSets.main.runtimeClasspath
+}
+task MultiGaugeDemo(type: JavaExec) {
+    main = "eu.hansolo.MultiGaugeDemo"
+    classpath = sourceSets.main.runtimeClasspath
+}
+task OverviewDemo(type: JavaExec) {
+    main = "eu.hansolo.OverviewDemo"
+    classpath = sourceSets.main.runtimeClasspath
+}
+task PollenDashboard(type: JavaExec) {
+    main = "eu.hansolo.PollenDashboard"
+    classpath = sourceSets.main.runtimeClasspath
+}
+
