--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,9 @@ if (currentOS.isWindows()) {
 dependencies {
     compile 'eu.hansolo:colors:+'
     compile 'eu.hansolo:Medusa:+'
-   // compile "org.openjfx:javafx-base:11:${platform}"
-    //compile "org.openjfx:javafx-graphics:11:${platform}"
+    compile "org.openjfx:javafx-base:11:${platform}"
+    compile "org.openjfx:javafx-graphics:11:${platform}"
     compile "org.openjfx:javafx-controls:11:${platform}"
-    //compile "org.openjfx:javafx-fxml:11:${platform}"
 }
 
 
